[package]
name = "avfoundation"
version = "0.1.3"
authors = ["Adam Nemecek <adamnemecek@gmail.com>"]
edition = "2018"
description = "Rust bindings for AVFoundation"
homepage = "https://github.com/adamnemecek/avfoundation-rs"
repository = "https://github.com/adamnemecek/avfoundation-rs"
readme = "README.md"
keywords = ["audio", "macos", "bindings"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cocoa-foundation = "0.1"
bitflags = "1"
log = "0.4"
#block = "0.1.5"
block = { path = "../rust-block" }
foreign-types = "0.3"
rand = "0.8.2"
chromagear = { path = "../chromagear"}
core_audio_types = { path = "../core_audio_types" }
mach = "*"

[dependencies.objc]
version = "0.2.4"
features = ["objc_exception"]

[dev-dependencies]
unsafe_ref = { path = "../unsafe_ref" }
